Fix index rendering

--- a/nutrition.tex
+++ b/nutrition.tex
@@ -79,6 +79,11 @@
 \part{Бонус: частка~з~кнігі Воля да жыцьця}
 \include{willpower/chapter4}
 
+
+\makeatletter
+\addtocontents{toc}{\protect\setlength{\cftbeforechapterskip}{10pt \@plus\p@}}
+\makeatother
+\addcontentsline{toc}{chapter}{Прадметны паказальнік}
 \printindex
 
 \end{document}
